fixtures/cs-cmp-01/good/username-compare.ts
import crypto from "crypto";

export function checkUser(username: string) {
	return username === "admin";
}

void crypto;
