fixtures/cs-cmp-01/bad/signature-header-compare.ts
import crypto from "crypto";

export function verifyHeader(signature: string, expectedSig: string) {
	return signature === expectedSig;
}

void crypto;
